@@ -9,27 +9,27 @@ import com.mmnaseri.utils.spring.data.proxy.RepositoryFactory;
 import com.mmnaseri.utils.spring.data.proxy.RepositoryFactoryConfiguration;
 import com.mmnaseri.utils.spring.data.proxy.impl.DefaultRepositoryFactory;
 
-import java.io.Serializable;
 import java.util.LinkedList;
 import java.util.List;
 
 /**
  * This class implements the interfaces used to define a DSL for mocking a repository.
  *
- * @author Milad Naseri (mmnaseri@programmer.net)
+ * @author Milad Naseri (m.m.naseri@gmail.com)
  * @since 1.0 (10/14/15)
  */
 public class RepositoryMockBuilder implements Start, ImplementationAnd, KeyGeneration {
 
     private final RepositoryFactory factory;
     private final List<Class<?>> implementations;
-    private final KeyGenerator<? extends Serializable> keyGenerator;
+    private final KeyGenerator<?> keyGenerator;
 
     public RepositoryMockBuilder() {
-        this(null, new LinkedList<Class<?>>(), null);
+        this(null, new LinkedList<>(), null);
     }
 
-    private RepositoryMockBuilder(RepositoryFactory factory, List<Class<?>> implementations, KeyGenerator<? extends Serializable> keyGenerator) {
+    private RepositoryMockBuilder(RepositoryFactory factory, List<Class<?>> implementations,
+                                  KeyGenerator<?> keyGenerator) {
         this.factory = factory;
         this.implementations = implementations;
         this.keyGenerator = keyGenerator;
@@ -58,12 +58,12 @@ public class RepositoryMockBuilder implements Start, ImplementationAnd, KeyGener
     }
 
     @Override
-    public <S extends Serializable> Implementation generateKeysUsing(KeyGenerator<S> keyGenerator) {
+    public <S> Implementation generateKeysUsing(KeyGenerator<S> keyGenerator) {
         return new RepositoryMockBuilder(factory, implementations, keyGenerator);
     }
 
     @Override
-    public <S extends Serializable, G extends KeyGenerator<S>> Implementation generateKeysUsing(Class<G> generatorType) {
+    public <S, G extends KeyGenerator<S>> Implementation generateKeysUsing(Class<G> generatorType) {
         //noinspection unchecked
         final G instance = (G) createKeyGenerator(generatorType);
         return generateKeysUsing(instance);
@@ -77,7 +77,7 @@ public class RepositoryMockBuilder implements Start, ImplementationAnd, KeyGener
     private KeyGenerator<?> createKeyGenerator(Class<? extends KeyGenerator> generatorType) {
         final KeyGenerator instance;
         try {
-            instance = generatorType.newInstance();
+            instance = generatorType.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new MockBuilderException("Failed to instantiate key generator of type " + generatorType, e);
         }
@@ -94,19 +94,22 @@ public class RepositoryMockBuilder implements Start, ImplementationAnd, KeyGener
         }
         if (keyGenerator == null) {
             final RepositoryFactoryConfiguration configuration = repositoryFactory.getConfiguration();
-            final KeyGenerator<? extends Serializable> evaluatedKeyGenerator;
+            final KeyGenerator<?> evaluatedKeyGenerator;
             if (configuration.getDefaultKeyGenerator() != null) {
                 evaluatedKeyGenerator = configuration.getDefaultKeyGenerator();
             } else {
                 final KeyGeneratorProvider generatorProvider = new KeyGeneratorProvider();
-                final RepositoryMetadata metadata = configuration.getRepositoryMetadataResolver().resolve(repositoryInterface);
-                final Class<? extends Serializable> identifierType = metadata.getIdentifierType();
-                final Class<? extends KeyGenerator<? extends Serializable>> keyGeneratorType = generatorProvider.getKeyGenerator(identifierType);
+                final RepositoryMetadata metadata = configuration.getRepositoryMetadataResolver().resolve(
+                        repositoryInterface);
+                final Class<?> identifierType = metadata.getIdentifierType();
+                final Class<? extends KeyGenerator<?>> keyGeneratorType = generatorProvider.getKeyGenerator(
+                        identifierType);
                 evaluatedKeyGenerator = createKeyGenerator(keyGeneratorType);
             }
             return generateKeysUsing(evaluatedKeyGenerator).mock(repositoryInterface);
         } else {
-            return repositoryFactory.getInstance(keyGenerator, repositoryInterface, implementations.toArray(new Class[implementations.size()]));
+            return repositoryFactory.getInstance(keyGenerator, repositoryInterface,
+                                                 implementations.toArray(new Class[0]));
         }
     }
 
